[PC] Some basic skeleton files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(autograd)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(autograd STATIC library.cpp)
+add_library(autograd INTERFACE
+        include/tensor_one.h
+        include/tape.h
+        include/operations.h
+        src/operations.cpp)
